Fixed grid gap and margins

--- a/_app/css/modules/fun.css
+++ b/_app/css/modules/fun.css
@@ -1,16 +1,16 @@
 .fun__container {
 	display: grid;
 	margin: 0 auto 5rem auto;
-	width: 90%;
+	width: 80%;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(auto, 1fr);
-	gap: 3rem;
+	gap: 5rem;
 }
 
 .fun__container-link {
 	position: relative;
-	margin: 1rem auto;
-	width: 70%;
+	margin: 0 auto;
+	width: 100%;
 	border: 0.4rem solid var(--quinary);
 	border-radius: 0.1rem;
 	box-shadow: 6px 8px 10px var(--tertiary);
@@ -35,12 +35,8 @@
 
 @media screen and (max-width: 1010px) {
 	.fun__container {
-		width: 100%;
-		gap: 0.5rem;
-	}
-
-	.fun__container-link {
 		width: 90%;
+		gap: 3rem;
 	}
 
 	.fun__container-link-title {
